# pid-detector

./: .env.example  README.md  data.yaml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
runs/detect/train27/: args.yaml  results.csv
src/: __init__.py  app.py
src/config/: __init__.py  logging_config.py  settings.py
src/core/: __init__.py  coordinate_transformer.py  detector.py  pdf_renderer.py  processor.py  text_extractor.py
src/gui/: __init__.py  app.py  styles.py
src/gui/components/: __init__.py  toolbar.py
src/gui/views/: __init__.py  data_view.py  progress_view.py  settings_dialog.py  upload_view.py
src/training/: __init__.py  train_yolo.py
src/utils/: __init__.py  file_utils.py  visualization.py
tests/: __init__.py  test_core.py
